--- a/CFP.App/Formularios/Cadastros/UserControlUsuario.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlUsuario.xaml
@@ -76,50 +76,75 @@
                        FontSize="12"
                       Foreground="#FF1F3D68"
                        Margin="5,5,0,0"/>
-            <Grid x:Name="GridControls" Margin="70">
+            <Grid x:Name="GridControls" Margin="70 40 70 40">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
                 <TextBox
                     x:Name="txtNome"
+                    Grid.Row="0"
                      materialDesign:HintAssist.Hint="Nome" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
                      Foreground="#FF1F3D68"  
-                     VerticalAlignment="Top"/>
+                     VerticalAlignment="Center"/>
+
+                <TextBox
+                    x:Name="txtNomeAcesso"
+                    Grid.Row="1"
+                     materialDesign:HintAssist.Hint="Nome de Acesso " 
+                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                     FontFamily="Champagne &amp; Limousines" 
+                     FontSize="22" 
+                     Foreground="#FF1F3D68"  
+                     VerticalAlignment="Center" PreviewKeyDown="txtNomeAcesso_PreviewKeyDown"/>
 
                 <PasswordBox
                     x:Name="txtSenha"
+                    Grid.Row="2"
                      materialDesign:HintAssist.Hint="Senha" 
                      Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" 
-                     Margin="0,59,0,275.6"/>
+                     Foreground="#FF1F3D68"
+                     VerticalAlignment="Center"/>
+                
                 <PasswordBox
                     x:Name="txtConfirmaSenha"
+                    Grid.Row="3"
                      materialDesign:HintAssist.Hint="Confirma Senha" 
                      Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" 
-                     Margin="0,119,0,215.6"/>
+                     Foreground="#FF1F3D68"
+                     VerticalAlignment="Center" LostFocus="txtConfirmaSenha_LostFocus"/>
 
                 <ComboBox 
                     x:Name="cmbTipoUsuario"
+                    Grid.Row="4"
                      materialDesign:HintAssist.Hint="Tipo de Usuário" 
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,174,0,162.6"  
-                     />
-
+                     Foreground="#FF1F3D68"
+                     VerticalAlignment="Center"/>
+                
                 <ComboBox 
                     x:Name="cmbSituacao"
+                    Grid.Row="5"
                      materialDesign:HintAssist.Hint="Situação" 
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,227,0,109.6"  
-                     />
+                     Foreground="#FF1F3D68"
+                     VerticalAlignment="Center"/>
             </Grid>
         </Grid>
     </Grid>
