--- a/CFP.App/App.xaml
+++ b/CFP.App/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CFP.App"
-             StartupUri="Formularios/Principais/Principal.xaml">
+             StartupUri="Formularios/Principais/Principal.xaml" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
